# aws-bucket-mgr

./: Cargo.toml  README.md
src/: main.rs
