[package]
name = "aws-bucket-mgr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
aws-config = "1.1.1"
aws-sdk-s3 = "1.11.0"
crossterm = "0.27.0"
ratatui = { version = "0.25.0", features = ["all-widgets"] }
tokio = { version = "1.35.1", features = ["full"] }
